--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,20 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+table.table-hover td {
+  cursor: pointer;
+}
+
+tr.strikethrough td {
+  position: relative;
+}
+
+tr.strikethrough td div:before {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border-bottom: 1px solid #333;
+  width: 100%;
+}
