--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,60 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   margin: 0;
+  margin-bottom: 80px;
   padding: 0;
   font-family: sans-serif;
+}
+
+.loading-shield {
+  text-align: center;
+}
+
+.loading-shield .shield {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  opacity: 0.3;
+  background-color: black;
+}
+
+.loading-shield .spinner {
+  position: absolute;
+  top: 200px;
+  font-size: 4em;
+  color: #E0230E;
+  animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
 }
 
 table.table-hover td {
   cursor: pointer;
 }
 
-tr.strikethrough td {
+td.strikethrough {
   position: relative;
   text-decoration: line-through;
   font-style: italic;
 }
 
-/*tr.strikethrough td div:before {
-  content: " ";
+footer {
   position: absolute;
-  top: 50%;
-  left: 0;
-  border-bottom: 1px solid #333;
+  bottom: 0;
   width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+  margin-top: 20px;
+
 }
-*/
+
+footer .container .text-muted {
+  margin: 20px 0;
+}
